# Distributed-task-schedular-system

./: CMakeLists.txt
proto/: scheduler.proto
scheduler/: scheduler_server.cpp  scheduler_service.cpp  scheduler_service.h
worker/: heartbeat.cpp  heartbeat.h  task_executor.cpp  task_executor.h  worker_node.cpp
worker/utils/: utils.cpp  utils.h
